--- a/app.yaml
+++ b/app.yaml
@@ -6,3 +6,6 @@ api_version: 1
 handlers:
 - url: .*
   script: main.py
+- url: /api
+  script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  login: admin
